--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
 
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flamengo</title>
+
+</head>
+<body>
+
+     <h1>Flamengo</h1>
+
+     <p>O Flamengo foi fundado em 17 de novembro de 1895 para as disputas de remo. A entrada da equipe no futebol aconteceu em 1912.
+     Atualmente, o time rubro-negro é o maior vencedor da história do Campeonato Carioca, com 31 títulos.
+     Segundo diversas pesquisas, é o clube com o maior número de torcedores do País.</p>
+     <p>Possuindo 8 títuos ganhados em 1980, 1982, 1983, 1987, 1992, 2009, 2019 e 2020</p>
+    <img src="*imagem" alt="">
+
+
+
+
+
+
+
+
+
+
+
+</body>
+</html>
